cambios en usuario

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 PORT=8080
+
+
+DB_CNN=mongodb+srv://Coollfire:hZZ7IIaEik57vNDf@cluster0-fvset.gcp.mongodb.net/Tesis2
+
+USER=Coollfire
+PASS=hZZ7IIaEik57vNDf
+
+SECRET_JWT_SEED=Soyl@129Clav3Su44rSe//12/_1/gu//syy/_maaaXD@
