--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,7 @@
-PORT=8080
+PORT=
 
-DB_CNN=
+USER=
+PASS=
 
+DB_CNN=mongodb+srv://Coollfire:d4VWnSlazGnYJIuM@cluster0.fvset.gcp.mongodb.net/Learing
 SECRET_JWT_SEED=
