--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "start": "node app"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.24.0",
+    "cloudinary": "^1.26.3",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
-    "express-validator": "^6.9.2",
-    "google-auth-library": "^7.0.2",
+    "express-validator": "^6.12.1",
+    "google-auth-library": "^7.9.1",
+    "jshint": "^2.13.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.15",
-    "socket.io": "^3.1.1",
+    "mongoose": "^5.13.9",
+    "socket.io": "^3.1.2",
     "uuid": "^8.3.2"
   }
 }
