se elimino validacion de es admin a los grupos

--- a/.example.env
+++ b/.example.env
@@ -3,5 +3,5 @@ PORT=
 USER=
 PASS=
 
-DB_CNN=mongodb+srv://Coollfire:d4VWnSlazGnYJIuM@cluster0.fvset.gcp.mongodb.net/Learing
+DB_CNN=nodemomongodb+srv://Coollfire:d4VWnSlazGnYJIuM@cluster0.fvset.gcp.mongodb.net/Learing
 SECRET_JWT_SEED=
